# simple-telegram

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
src/dead_simple_telegram/: __init__.py  client.py
src/simple_telegram/: client.py
tests/: test_config.py
