[metadata]
name = dead-simple-telegram
version = 0.1.2
description = Dead simple helper for posting Telegram bot messages.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Rion Morgenstern
url = https://github.com/rioncm/simple-telegram
project_urls =
    Homepage = https://github.com/rioncm/simple-telegram
    Repository = https://github.com/rioncm/simple-telegram
    Issues = https://github.com/rioncm/simple-telegram/issues
keywords = telegram, bot, notification
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Communications :: Chat

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests>=2.0
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7
